tests/negative/regression/r1.orng
// r1.orng:5:12: error: error: expected a compile-time constant type, got function
// fn () -> 0[-2]{}
//           ^
// 
fn () -> 0[-2]{}